--- a/virt-passthrough.tex
+++ b/virt-passthrough.tex
@@ -85,7 +85,7 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[The Philosophy in PCI Passthrough]{The Philosophy in PCI Passthrough} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[To Trap or Not To Trap: The PCI Passthrough]{To Trap or Not To Trap: The PCI Passthrough} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Dongli Zhang} % Your name
 %\institute[Oracle] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
